manifests/wordpress/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  host: wordpress-wordpress.apps.ocp4.example.com
  to:
    kind: Service
    name: wordpress
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
